<resources>
    <string name="app_name">Bệnh viện phụ sản HN</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout_docter">Thoát</string>


    <string name="action_login_title">Đăng nhập</string>
    <string name="action_register_title">Đăng ký</string>
    <string name="prompt_email">Tên đăng nhập</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_dob">Ngày sinh</string>
    <string name="hint_gender">Giới tính</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="hint_user_type">Bạn là bác sỹ</string>
    <string name="hint_docter">Là Bác Sĩ</string>
    <string name="hint_patient">Là bệnh nhân</string>
    <string name="hint_address">Địa chỉ</string>
    <string name="hint_phone">Điện thoại</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="action_register">Đăng ký</string>
    <string name="action_sign_in_short">Đăng nhập</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="msg_no_internet_access">No network connection. Check and try again.</string>
    <string name="msg_request_fail_retry">Request failed. \nPlease try it again!</string>
    <string name="no_data">No Data...</string>

    <string name="name_notnull">Tên không được bỏ trống</string>
    <string name="email_check">Vui lòng kiểm tra lại email</string>
    <string name="password_check">Mật khẩu không hợp lệ</string>
    
    <string name="docter_activity_title">Lịch đặt đặt khám</string>
    <string name="title_name">Name</string>
    <string name="title_my_info">Thông tin</string>
    <string name="booking_history">Lịch đặt đặt khám</string>

    <string name="service_title">Dịch vụ</string>
    <string name="about_title">Giới thiệu</string>
    <string name="action_booking">Đặt lịch ngay</string>
    <string name="action_chapnhan">Chấp nhận</string>
    <string name="action_huy">Hủy lịch</string>
    <string name="action_call_now">Gọi ngay</string>

    <string name="btn_login_with_google">Đăng nhập với Google</string>
    <string name="btn_login_with_facebook">Đăng nhập với Facebook</string>

    <string name="com_facebook_loginview_log_out_button">Thoát</string>
    <string name="com_facebook_loginview_log_in_button">Đăng nhập</string>
    <string name="com_facebook_loginview_log_in_button_long">Đăng nhập bằng facebook</string>

    <string name="next">Tiếp theo</string>
    <string name="skip">Bỏ qua</string>
    <string name="start">Tiếp theo</string>

    <string name="login_title">TRAO NHẬN NIỀM TIN \nKHƠI THÊM NGUỒN HẠNH PHÚC</string>

    <string name="slide_1_title">CHAT VÀ GỌI THOẠI</string>
    <string name="slide_1_desc">Tương tác trực tiếp với bác sĩ chuyên khoa và hoàn toàn yên tâm về chất lượng</string>

    <string name="slide_4_title">BẢN TIN SỨC KHỎE</string>
    <string name="slide_4_desc">Khỏe đẹp suốt cả ngày khi mà có quá nhiều tin tức, đây là nguần tin đáng xem nhất</string>

    <string name="slide_3_title">ĐẶT HẸN KHÁM</string>
    <string name="slide_3_desc">Gặp trực tiếp bác sĩ tại phòng khám khi trường hợp khẩn cấp phải xử lý ngay</string>

    <string name="slide_2_title">XÉT NGHIỆM TẠI NHÀ</string>
    <string name="slide_2_desc">Lấy mẫu trực tiếp tại nhà và cho kết quả chính xác đến tuyệt vời về các bệnh phổ biến</string>

    <string name="facebook_app_id">476579576030633</string>
    <string name="fb_login_protocol_scheme">fb476579576030633</string>
    
    <string name="tam_title">DỊCH VỤ TẮM BÉ SƠ SINH</string>
    <string name="csm_title">VỆ SINH TẦNG SINH MÔN</string>
    <string name="tam_3day">3 Buổi/ 900.000 VNĐ</string>
    <string name="tam_6day">5 Buổi/ 1.500.000 VNĐ</string>
    <string name="tam_10day">10 Buổi/ 3.000.000 VNĐ</string>

    <string name="not_now">Bỏ qua</string>
</resources>
