<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:n1="http://schemas.android.com/apk/res/android"
    n1:layout_width="fill_parent"
    n1:layout_height="fill_parent"
    n1:orientation="vertical">
    <ScrollView
        n1:layout_width="fill_parent"
        n1:layout_height="0.0dip"
        n1:layout_weight="1.0"
        n1:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            n1:id="@+id/mainConstraintLayout"
            n1:layout_width="fill_parent"
            n1:layout_height="wrap_content"
            n1:background="@color/white"
            n1:paddingTop="16.0dip">

            <ProgressBar
                n1:id="@+id/register_progress"
                style="?android:attr/progressBarStyleLarge"
                n1:layout_width="wrap_content"
                n1:layout_height="wrap_content"
                n1:layout_marginBottom="8dp"
                n1:visibility="gone" />

            <android.support.design.widget.TextInputLayout xmlns:n2="http://schemas.android.com/apk/res-auto"
                n1:id="@+id/nameLayout"
                n1:layout_width="fill_parent"
                n1:layout_height="wrap_content"
                n1:layout_marginLeft="16.0dip"
                n1:layout_marginRight="16.0dip"
                n1:layout_marginTop="16.0dip"
                n2:layout_constraintEnd_toEndOf="parent"
                n2:layout_constraintStart_toStartOf="parent">
                <android.support.design.widget.TextInputEditText
                    n1:id="@+id/signup_input_name"
                    n1:layout_width="fill_parent"
                    n1:layout_height="wrap_content"
                    n1:hint="Name"
                    n1:imeOptions="actionNext"
                    n1:inputType="text"
                    n1:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout xmlns:n3="http://schemas.android.com/apk/res-auto"
                n1:id="@+id/emailLayout"
                n1:layout_width="fill_parent"
                n1:layout_height="wrap_content"
                n1:layout_marginLeft="16.0dip"
                n1:layout_marginRight="16.0dip"
                n1:layout_marginTop="16.0dip"
                n3:layout_constraintEnd_toEndOf="parent"
                n3:layout_constraintStart_toStartOf="parent"
                n3:layout_constraintTop_toBottomOf="@id/nameLayout">
                <android.support.design.widget.TextInputEditText
                    n1:id="@+id/signup_input_email"
                    n1:layout_width="fill_parent"
                    n1:layout_height="wrap_content"
                    n1:hint="Email"
                    n1:imeOptions="actionNext"
                    n1:inputType="textEmailAddress"
                    n1:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout xmlns:n4="http://schemas.android.com/apk/res-auto"
                n1:id="@+id/passwordLayout"
                n1:layout_width="fill_parent"
                n1:layout_height="wrap_content"
                n1:layout_marginLeft="16.0dip"
                n1:layout_marginRight="16.0dip"
                n1:layout_marginTop="16.0dip"
                n4:layout_constraintEnd_toEndOf="parent"
                n4:layout_constraintStart_toStartOf="parent"
                n4:layout_constraintTop_toBottomOf="@id/emailLayout">
                <android.support.design.widget.TextInputEditText
                    n1:id="@+id/signup_input_password"
                    n1:layout_width="fill_parent"
                    n1:layout_height="wrap_content"
                    n1:hint="@string/hint_password"
                    n1:imeOptions="actionNext"
                    n1:inputType="textPassword"
                    n1:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout xmlns:n5="http://schemas.android.com/apk/res-auto"
                n1:id="@+id/phoneLayout"
                n1:layout_width="fill_parent"
                n1:layout_height="wrap_content"
                n1:layout_marginLeft="16.0dip"
                n1:layout_marginRight="16.0dip"
                n1:layout_marginTop="16.0dip"
                n5:layout_constraintEnd_toEndOf="parent"
                n5:layout_constraintStart_toStartOf="parent"
                n5:layout_constraintTop_toBottomOf="@id/passwordLayout">
                <android.support.design.widget.TextInputEditText
                    n1:id="@+id/signup_input_phone"
                    n1:layout_width="fill_parent"
                    n1:layout_height="wrap_content"
                    n1:hint="@string/hint_phone"
                    n1:imeOptions="actionNext"
                    n1:inputType="numberSigned"
                    n1:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout xmlns:n6="http://schemas.android.com/apk/res-auto"
                n1:id="@+id/addressLayout"
                n1:layout_width="fill_parent"
                n1:layout_height="wrap_content"
                n1:layout_marginLeft="16.0dip"
                n1:layout_marginRight="16.0dip"
                n1:layout_marginTop="16.0dip"
                n6:layout_constraintEnd_toEndOf="parent"
                n6:layout_constraintStart_toStartOf="parent"
                n6:layout_constraintTop_toBottomOf="@id/phoneLayout">
                <android.support.design.widget.TextInputEditText
                    n1:id="@+id/signup_input_address"
                    n1:layout_width="fill_parent"
                    n1:layout_height="wrap_content"
                    n1:hint="@string/hint_address"
                    n1:imeOptions="actionNext"
                    n1:inputType="text"
                    n1:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
            <RelativeLayout xmlns:n7="http://schemas.android.com/apk/res-auto"
                n1:id="@+id/sexLayout"
                n1:layout_width="match_parent"
                n1:layout_height="wrap_content"
                n1:layout_marginLeft="20dp"
                n7:layout_constraintEnd_toEndOf="parent"
                n7:layout_constraintStart_toStartOf="parent"
                n7:layout_constraintTop_toBottomOf="@id/addressLayout">
                <RadioGroup
                    n1:id="@+id/gender_radio_group"
                    n1:layout_width="wrap_content"
                    n1:layout_height="wrap_content"
                    n1:orientation="horizontal">
                    <RadioButton
                        n1:id="@+id/male_radio_btn"
                        n1:layout_width="wrap_content"
                        n1:layout_height="wrap_content"
                        n1:text="@string/male"
                        n1:checked="true"
                        />
                    <RadioButton
                        n1:id="@+id/female_radio_btn"
                        n1:layout_width="wrap_content"
                        n1:layout_height="wrap_content"
                        n1:text = "@string/female"
                        />
                </RadioGroup>
            </RelativeLayout>

            <RelativeLayout xmlns:n8="http://schemas.android.com/apk/res-auto"
                n1:id="@+id/usertypeLayout"
                n1:layout_width="match_parent"
                n1:layout_height="wrap_content"
                n1:layout_marginLeft="20dp"
                n8:layout_constraintEnd_toEndOf="parent"
                n8:layout_constraintStart_toStartOf="parent"
                n8:layout_constraintTop_toBottomOf="@id/sexLayout">
                <RadioGroup
                    n1:id="@+id/usertype_radio_group"
                    n1:layout_width="wrap_content"
                    n1:layout_height="wrap_content"
                    n1:orientation="horizontal">
                    <RadioButton
                        n1:id="@+id/rdo_docter"
                        n1:layout_width="wrap_content"
                        n1:layout_height="wrap_content"
                        n1:text="@string/hint_docter"
                        n1:checked="true"
                        />
                    <RadioButton
                        n1:id="@+id/rdo_patient"
                        n1:layout_width="wrap_content"
                        n1:layout_height="wrap_content"
                        n1:text = "@string/hint_patient"
                        />
                </RadioGroup>
            </RelativeLayout>

            <Button xmlns:n9="http://schemas.android.com/apk/res-auto"
                n1:id="@+id/btn_signup"
                n1:layout_width="fill_parent"
                n1:layout_height="wrap_content"
                n1:text="@string/action_register"
                n1:background="@color/login_button_background"
                n1:layout_marginTop="16dp"
                n1:textColor="@android:color/white"
                n9:layout_constraintEnd_toEndOf="parent"
                n9:layout_constraintStart_toStartOf="parent"
                n9:layout_constraintTop_toBottomOf="@id/usertypeLayout" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</LinearLayout>