<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:src="@drawable/img_loadding"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".3">
                <ProgressBar
                    android:id="@+id/info_detail_progress"
                    android:layout_gravity="center|center_horizontal"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:visibility="gone" />
            </FrameLayout>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin">
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:padding="@dimen/padding_big"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ivAvatar_pic"
                        android:layout_width="@dimen/list_item_icon"
                        android:layout_height="@dimen/list_item_icon"
                        android:src="@drawable/icon_docter" />
                    <TextView
                        android:id="@+id/tvinfo_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_title"
                        android:layout_toRightOf="@id/ivAvatar_pic"
                        android:layout_marginLeft="@dimen/padding_big"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
                    <TextView
                        android:id="@+id/tv_docter_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvinfo_name"
                        android:layout_toEndOf="@+id/ivAvatar_pic"
                        android:layout_toRightOf="@+id/ivAvatar_pic"
                        android:layout_marginLeft="@dimen/padding_big"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin">

                <LinearLayout
                    android:id="@+id/frm_service_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_normal"
                        android:background="@drawable/title_backgroud"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tam_title"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/tam_radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/tvUsertype"
                        android:orientation="vertical">
                        <RadioButton
                            android:id="@+id/rdo3day"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tam_3day"
                            android:tag="3"
                            />
                        <RadioButton
                            android:id="@+id/rdo6day"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tag="6"
                            android:text = "@string/tam_6day"
                            />
                        <RadioButton
                            android:id="@+id/rdo10day"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tag="10"
                            android:text = "@string/tam_10day"
                            />
                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_normal"
                        android:background="@drawable/title_backgroud"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/csm_title"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/vs_radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RadioButton
                            android:id="@+id/rdo3dayvs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tam_3day"
                            android:tag="3" />
                        <RadioButton
                            android:id="@+id/rdo6dayvs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tag="6"
                            android:text = "@string/tam_6day"
                            />
                        <RadioButton
                            android:id="@+id/rdo10dayvs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:tag="10"
                            android:text = "@string/tam_10day"
                            />
                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <Button android:id="@+id/btn_booking"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_booking"
        android:background="@color/login_button_background"
        android:layout_marginTop="16dp"
        android:layout_gravity="bottom|center"
        android:textColor="@android:color/white"/>
</android.support.design.widget.CoordinatorLayout>