<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_booking"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_collapseMode="pin" />
    </android.support.design.widget.AppBarLayout>

    <fragment
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button android:id="@+id/btnCallNow"
            android:layout_marginTop="60dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="top|right"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal"
            android:layout_marginRight="@dimen/card_margin"
            android:text="@string/action_call_now"
            android:background="@color/login_button_background"
            android:visibility="gone"
            android:textColor="@android:color/white"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="@dimen/card_margin"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvTimeCreate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:text=""
                    android:textColor="@color/green"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:paddingTop="@dimen/padding_normal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvKhoangcach"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="..."
                        android:textSize="@dimen/text_size_medium" />
                    <TextView
                        android:id="@+id/tvTam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="..."
                        android:textSize="@dimen/text_size_medium" />
                    <TextView
                        android:id="@+id/tvVS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="..."
                        android:textSize="@dimen/text_size_medium" />
                </RelativeLayout>
                <TextView
                    android:id="@+id/tvTongTien"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textColor="@color/green"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <TextView
                    android:id="@+id/tvPhoneTitle"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Điện thoại/Note"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <TextView
                    android:id="@+id/tvPhoneNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="..." />

                <Button android:id="@+id/btnGreen"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_chapnhan"
                    android:background="@color/login_button_background"
                    android:textColor="@android:color/white"/>

                <Button android:id="@+id/btnYellow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/action_huy"
                    android:background="@color/orange"
                    android:textColor="@android:color/white"/>

                <RatingBar
                    android:id="@+id/ratingBooking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/ratingBarStyle"
                    android:clickable="true"
                    android:numStars="5"
                    android:stepSize="0.5"
                    android:visibility="gone"/>

                <Button android:id="@+id/btnSubmitrate"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Gửi đánh giá"
                    android:background="@color/login_button_background"
                    android:textColor="@android:color/white"
                    android:visibility="gone"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </fragment>

    <ProgressBar
        android:id="@+id/list_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible" >
    </ProgressBar>

</android.support.design.widget.CoordinatorLayout>
